# itwin-cgls-data

./: .gitignore  README.md  pyproject.toml
itwin_cgls_data/: ascat_vis.ipynb  cgls_ssm_daily_download.py  data_exploration.ipynb  filter_month.sh
