[tool.poetry]
name = "itwin-cgls-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "vito"
url = "https://artifactory.vgt.vito.be/artifactory/api/pypi/python-packages/simple"
default = true

[tool.poetry.dependencies]
python = "^3.10"
terracatalogueclient = "^0.1.16"
ipykernel = "^6.29.3"
pandas = "^2.2.1"
jinja2 = "^3.1.3"
netcdf4 = "^1.6.5"
matplotlib = "^3.8.3"
cartopy = "^0.22.0"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
